# Sylvestre

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci-docker.yml
nest_service/: package-lock.json  package.json
nest_service/src/: app.controller.ts  app.module.ts  rust.service.ts
nest_service/src/proto/: service.proto
postgres/init/: example.txt
rust_service/: .env.example  Cargo.toml  Dockerfile  build.rs
rust_service/migrations/: 20250301122211_create_greetings_table.sql  20250301122300_populate_greetings_table.sql  20250302132752_create_goodbye_message_table.sql  20250302132808_populate_goodbye_message_table.sql  20250303175132_create_species_table.sql
rust_service/proto/: service.proto
rust_service/src/: main.rs
