[package]
name = "rust_service"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
prost = "0.13.5"
sqlx = { version = "0.8.3", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"

[build-dependencies]
tonic-build = "0.10"
